# Open-Sable

./: .dev-studio.pid  .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  Modelfile.qwen3.5  README.md  cli.py  controlled_mutation.py  datetime_tests.py  demo.py  demo_wizard.sh  dependency_mapper.py  file_tracking_tests.py  goal_cache.py  goal_reference_cache.py  goal_tracker.py  import_verifier.py  install.py  json_optimization.py  json_reference_cache.py  lru_cache.py  main.py  mkdocs.yml  modified_files.json  pyproject.toml  quickstart.sh  requirements-extras.txt  requirements-lock.txt  requirements-trading.txt  requirements.txt  sable.py  script.py  soul.md  start.sh  symmetry_framework.py  system_check.sh  test_dependency_mapper.py  test_lru_cache.py  (+3 more)
.github/: pre-commit.py
.github/workflows/: ci.yml
agents/: README.md
agents/_template/: profile.EXAMPLE.env  soul.md  tools.json
agents/analyst/: soul.md  tools.json
agents/microai/: soul.md  tools.json
agents/microai/data/: goals.json
agents/sable/: profile.EXAMPLE.env  soul.md  tools.json
aggr/: index.html  vite.config.js
cli/: commands.py
dashboard/: demo.html  index.html  package.json  vite.config.js
dashboard/src/: App.jsx  main.jsx  theme.css
dashboard/src/components/: LoadingOverlay.jsx  PermissionDialog.jsx
dashboard/src/hooks/: useMultiAgent.js  useWebSocket.js
dashboard/src/lib/: utils.js
desktop/: AGENTS.md  CONTRIBUTING.md  README.ar.md  README.es.md  README.id.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.tr.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  index.html  package.json  pnpm-lock.yaml
desktop/.github/ISSUE_TEMPLATE/: bug_report.md
desktop/.github/workflows/: ci.yml  release.yml
desktop/apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
desktop/apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.client.json  vite.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
desktop/docs/: architecture.md
desktop/electron/: main.cjs  preload.cjs
desktop/scripts/: dev-remote.cjs  dev.cjs  ensure-agent-core-built.cjs
desktop/src/: App.jsx  index.jsx
desktop/src/components/: BrainPanel.jsx  ChatArea.jsx  DashboardPanel.jsx  DevStudioPanel.jsx  InputBar.jsx  LoadingOverlay.jsx  MessageBubble.jsx  Sidebar.jsx  (+5 more)
docs/: API_REFERENCE.md  PRODUCTION_DEPLOYMENT.md  SECURITY.md  TOOL_MANAGEMENT_COMPARISON.md  TRADING_GUIDE.md  self_improve_architecture.md
docs-site/: contributing.md  index.md
docs-site/architecture/: security.md
docs-site/getting-started/: installation.md  quickstart.md
docs-site/guides/: auto-adaptive.md  multi-agent.md  self-modification.md  skills.md  trading.md  userbot.md  web-scraping.md
examples/: advanced_ai_examples.py  agi_capabilities_example.py  api_examples.py  code_execution_examples.py  database_examples.py  file_management_examples.py  image_examples.py  multimodal_voice_example.py  rag_examples.py  scraping_examples.py
opensable/: __init__.py  __main__.py
opensable/core/: __init__.py  advanced_ai.py  advanced_memory.py  adversarial_tester.py  agent.py  agent_manager.py  agi_integration.py  akashic_records.py  analytics.py  autonomous_mode.py  autonomous_researcher.py  autonomous_web_agent.py  cache.py  causal_engine.py  checkpointing.py  codebase_rag.py  cognitive_archaeology.py  cognitive_chrysalis.py  cognitive_dark_matter.py  cognitive_fusion.py  cognitive_gravity.py  cognitive_immunity.py  cognitive_memory.py  cognitive_metabolism.py  cognitive_mitosis.py  cognitive_optimizer.py  cognitive_placebo.py  cognitive_scar.py  cognitive_teleportation.py  collective_unconscious.py  commands.py  computer_tools.py  config.py  connectome.py  context_manager.py  continuous_learner.py  conversation_log.py  curiosity_drive.py  deep_planner.py  deja_vu.py  (+115 more)
opensable/interfaces/: __init__.py  cli_interface.py  mobile_api.py  mobile_relay.py  slack_bot.py  telegram_bot.py  voice_call.py  whatsapp_bot.py
opensable/skills/: __init__.py  clipboard_skill.py  document_skill.py  gateway_sdk.py  grok_skill.py  instagram_skill.py  ocr_skill.py  voice_skill.py  x_skill.py  youtube_skill.py
research/: emergence_patterns.md
sable_dev/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
sable_dev/app/: landing.tsx  layout.tsx  page.tsx
sable_dev/components/: CodeEditor.tsx  ConsolePanel.tsx  DevicePreviewToolbar.tsx  ImageUpload.tsx  ImportProjectModal.tsx  VersionTimeline.tsx
sable_dev/config/: app.config.ts
sable_dev/hooks/: useSnapshots.ts
sable_dev/lib/: build-validator.ts  persistence.ts
sable_dev/styles/: main.css
scripts/: create_job_tracker.py  ig_browser_login.py  ig_resolve_challenge.py  pixel-bridge.py  test_hello.py  test_model_switch.py  test_sessions.py  test_tool_calling.py  test_ws.py
static/: dashboard.html  dashboard_modern.html  dashboard_v2.html  hub.html  monitor.html
tests/: conftest.py  mock_llm.py  test_advanced.py  test_agent_real.py  test_agentic_loop.py  test_autonomous_agency.py  test_cognitive_advanced.py  test_cognitive_features.py  test_e2e.py  test_features.py  test_image.py  test_primitives.py  test_sdk.py  test_skill_autowire.py
tests/memoization/: test_memoization.py
whatsapp-bridge/: bridge.js
(+293 files in other folders)
